--- a/templates/doctorhome.html
+++ b/templates/doctorhome.html
@@ -5,7 +5,7 @@
   <div class="container-fluid header bg-primary p-0 mb-5">
     <div class="row g-0 align-items-center flex-column-reverse flex-lg-row">
         <div class="col-lg-6 p-5 wow fadeIn" data-wow-delay="0.1s">
-            <h1 class="display-4 text-white mb-5">Good Health Is The Root Of All Heppiness</h1>
+            <h1 class="display-4 text-white mb-5">Taking care of your skin is more important than covering it up</h1>
             <div class="row g-4">
                 <div class="col-sm-4">
                     <div class="border-start border-light ps-4">
@@ -32,19 +32,19 @@
                 <div class="owl-carousel-item position-relative">
                     <img class="img-fluid" src="static/img/carousel-1.jpg" alt="">
                     <div class="owl-carousel-text">
-                        <h1 class="display-1 text-white mb-0">Cardiology</h1>
+                        <h1 class="display-1 text-white mb-0"></h1>
                     </div>
                 </div>
                 <div class="owl-carousel-item position-relative">
                     <img class="img-fluid" src="static/img/carousel-2.jpg" alt="">
                     <div class="owl-carousel-text">
-                        <h1 class="display-1 text-white mb-0">Neurology</h1>
+                        <h1 class="display-1 text-white mb-0"></h1>
                     </div>
                 </div>
                 <div class="owl-carousel-item position-relative">
                     <img class="img-fluid" src="static/img/carousel-3.jpg" alt="">
                     <div class="owl-carousel-text">
-                        <h1 class="display-1 text-white mb-0">Pulmonary</h1>
+                        <h1 class="display-1 text-white mb-0"></h1>
                     </div>
                 </div>
             </div>
@@ -66,8 +66,8 @@
             <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                 <p class="d-inline-block border rounded-pill py-1 px-4">About Us</p>
                 <h1 class="mb-4">Why You Should Trust Us? Get Know About Us!</h1>
-                <p>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
-                <p class="mb-4">Stet no et lorem dolor et diam, amet duo ut dolore vero eos. No stet est diam rebum amet diam ipsum. Clita clita labore, dolor duo nonumy clita sit at, sed sit sanctus dolor eos.</p>
+                <p>Caring for our skin is essential to ensure its health and radiance. Dermatologists play a vital role in helping us achieve and maintain healthy skin. By seeking their expertise, we can better understand and address any skin concerns.</p>
+                <p class="mb-4"></p>
                 <p><i class="far fa-check-circle text-primary me-3"></i>Quality health care</p>
                 <p><i class="far fa-check-circle text-primary me-3"></i>Only Qualified Doctors</p>
                 <p><i class="far fa-check-circle text-primary me-3"></i>Medical Research Professionals</p>
